[GIP-783] added --enable-preview flag to the Maven compiler plugin