@@ -1474,6 +1474,9 @@
 					<source>21</source>
 					<target>21</target>
 					<useIncrementalCompilation>false</useIncrementalCompilation>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 
